--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,10 +11,48 @@ button {
 
 .checkboxes {
   padding: 15% 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .info .checkboxes {
   padding: 3% 0;
+}
+
+.checkbox-custom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 0.25vw;
+  background-size: cover;
+  margin-right: 2.5%;
+  vertical-align: text-top;
+  width: 2vw;
+  height: 2vw;
+  cursor: pointer;
+}
+
+.checkbox-custom.check1 {
+  background-color: #143061;
+}
+
+.checkbox-custom.check2 {
+  background-color: #81396F;
+}
+
+.checkbox-custom.check3 {
+  background-color: #F6437D;
+}
+
+.checkbox-custom img {
+  width: 66%;
 }
 
 #p11, #p21, #p31, #p41 {
@@ -188,7 +226,6 @@ button {
 }
 
 #menu #cart .count {
-  display: none;
   top: -50%;
   left: 25%;
   position: absolute;
