--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -197,7 +197,6 @@ button {
         cursor: pointer;
         
         .count {
-            // display: none;
             top: -50%;
             left: 25%;
             position: absolute;
@@ -233,17 +232,24 @@ button {
         padding: 1%;
         border-bottom-right-radius: 1vw;
         border-bottom-left-radius: 1vw;
-        display: none;
     }
 
-    #item {
+    hr {
+        border: 1px solid #979797;
+        margin: 5% 0;
+        opacity: 0.35;
+    }
+
+    .item {
         width: 100%;
         display: flex;
         h1 {
-            font-size: 1.5vw;
+            font-size: 1.33vw;
+            
         }
         .preview {
             width: 35%;
+            display: flex;
         
             img {
                 width: 100%;
@@ -257,6 +263,7 @@ button {
         font-family: 'Open Sans', sans-serif;
         font-size: 1vw;
         text-decoration: underline;
+        cursor: pointer;
     }
 
     .info {
