--- a/src/css/style.css
+++ b/src/css/style.css
@@ -260,6 +260,8 @@ button {
   padding: 1%;
   border-bottom-right-radius: 1vw;
   border-bottom-left-radius: 1vw;
+  -webkit-box-shadow: 0 0.25vw 10px 0 rgba(0, 0, 0, 0.13);
+          box-shadow: 0 0.25vw 10px 0 rgba(0, 0, 0, 0.13);
 }
 
 #menu hr {
