--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -232,6 +232,7 @@ button {
         padding: 1%;
         border-bottom-right-radius: 1vw;
         border-bottom-left-radius: 1vw;
+        box-shadow: 0 0.25vw 10px 0 rgba(0,0,0,0.13);
     }
 
     hr {
